--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
 
             <h1>BMI Calculator</h1>
 
-            <img src="https://www.cdc.gov/healthyweight/images/assessing/bmi-adult-fb-600x315.jpg" alt="Bmi scale"> <br>
+            <img src="https://www.cdc.gov/healthyweight/images/assessing/bmi-adult-fb-600x315.jpg" alt="Bmi scale"> 
+            <br> 
+            <br>
 
             <input  type="text"  id="weight"  placeholder="Your weight in kg">
             <input  type="text"  id="height"  placeholder="Your height in cm">
