--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    <meta  charset="UTF-8">
 	    <meta  name="viewport"  content="width=device-width, initial-scale=1.0">
 	    <meta  http-equiv="X-UA-Compatible"  content="ie=edge">
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="src/assets/css/style.css">
         <title>BMI Calculator</title>
     </head>
   
@@ -26,8 +26,8 @@
             <button onclick="calculateBMI()"id="Calculate">Calculate</button> 
               <div id="results"></div>
 
-            <script  src="./assets/js/bmiCalculator.js"></script>
-            <script  src="./assets/js/bmiUI.js"></script>
+            <script  src="src/assets/js/bmiCalculator.js"></script>
+            <script  src="src/assets/js/bmiUI.js"></script>
        
     </body>
 
